--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-module-alias": "^1.1.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.18",
     "oracledb": "^5.3.0",
     "to": "^0.2.9",
     "update": "^0.7.4"
+  },
+  "_moduleAliases": {
+    "$Login": "./Login",
+    "$Main": "./Main",
+    "$Common": "./Common"
   }
 }
