--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "better-module-alias": "^1.1.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.18",
     "oracledb": "^5.3.0",
     "to": "^0.2.9",
