--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "nodemon": "^2.0.18",
     "oracledb": "^5.3.0",
     "to": "^0.2.9",
-    "update": "^0.7.4"
+    "update": "^0.7.4",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "_moduleAliases": {
     "$Login": "./Login",
