--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-module-alias": "^1.1.0",
     "bind-sql-string": "^1.2.2",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
